--- a/vinho.html
+++ b/vinho.html
@@ -111,7 +111,75 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="container">
+        <div class="product">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/250x400" alt="Cobos Cocodrilo Chardonnay">
+                <div class="discount">20% OFF</div>
+                <div class="rating">💬 7 querem</div>
+            </div>
+            <div class="product-info">
+                <h2>Cobos Cocodrilo Chardonnay 2020 750mL</h2>
+                <p>Argentina • Chardonnay</p>
+                <p class="price-old">R$ 239,90</p>
+                <p class="price-member">Assinante R$ 153,54</p>
+                <p class="price-regular">Não Assinante R$ 191,92</p>
+                <button class="buy-button">Comprar</button>
+                <div class="wishlist">❤️</div>
+            </div>
+        </div>
+
+        <div class="product">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/250x400" alt="San Marzano Talò Primitivo">
+                <div class="rating">💬 8 querem</div>
+            </div>
+            <div class="product-info">
+                <h2>San Marzano Talò Primitivo di Manduria 2022 750mL</h2>
+                <p>Itália • Primitivo</p>
+                <p class="price-old">R$ 229,90</p>
+                <p class="price-member">Assinante R$ 183,92</p>
+                <p class="price-regular">Não Assinante R$ 229,90</p>
+                <button class="buy-button">Comprar</button>
+                <div class="wishlist">❤️</div>
+            </div>
+        </div>
+
+        <div class="product">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/250x400" alt="Chateau de Berne AOP Emotion">
+                <div class="discount">30% OFF</div>
+                <div class="rating">⭐⭐⭐⭐⭐ (2)</div>
+            </div>
+            <div class="product-info">
+                <h2>Chateau de Berne AOP Emotion 2020 750mL</h2>
+                <p>França • Blend</p>
+                <p class="price-old">R$ 219,90</p>
+                <p class="price-member">Assinante R$ 123,14</p>
+                <p class="price-regular">Não Assinante R$ 153,93</p>
+                <button class="buy-button">Comprar</button>
+                <div class="wishlist">❤️</div>
+            </div>
+        </div>
+
+        <div class="product">
+            <div class="product-image">
+                <img src="https://via.placeholder.com/250x400" alt="San Marzano Sessantanni Primitivo">
+                <div class="rating">💬 47 querem</div>
+            </div>
+            <div class="product-info">
+                <h2>San Marzano Sessantanni Primitivo di Manduria DOP 2018 750mL</h2>
+                <p>Itália • Primitivo</p>
+                <p class="price-old">R$ 459,90</p>
+                <p class="price-member">Assinante R$ 367,92</p>
+                <p class="price-regular">Não Assinante R$ 459,90</p>
+                <button class="buy-button">Comprar</button>
+                <div class="wishlist">❤️</div>
+            </div>
+        </div>
+    </div>
+
 </body>
     <footer>
         <div class="footer-content">
